Create reset endpoint
